Fix a layout issue with labels on Notes

--- a/app/src/app/apps/app/notes/notes.component.scss
+++ b/app/src/app/apps/app/notes/notes.component.scss
@@ -21,6 +21,10 @@
   transform: scale(2);
 }
 
+.label-option {
+  min-width: 200px;
+}
+
 .marketplace-category {
   display: inline-block;
   padding: 12px 16px;
